feat: frontend home and bmi page are working

--- a/research-fe/angular.json
+++ b/research-fe/angular.json
@@ -72,10 +72,12 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "research-fe:build:production"
+              "browserTarget": "research-fe:build:production",
+              "proxyConfig": "src/proxy.conf.json"
             },
             "development": {
-              "browserTarget": "research-fe:build:development"
+              "browserTarget": "research-fe:build:development",
+              "proxyConfig": "src/proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
